# gobu

./: LICENCE.md  README.md
src/common/gobu/: gobu-backend-sokol.c  gobu-camera.c  gobu-camera.h  gobu-ecs.c  gobu-ecs.h  gobu-gfx.c  gobu-gfx.h  gobu-input.c  gobu-input.h  gobu-math.c  gobu-math.h  gobu-renderer-draw.c  gobu-type.h  gobu-util.c  gobu-util.h  gobu.h  meson.build
src/editor/: gapp.c  gapp_inspector_widgets.c  gapp_project_manager.c  gapp_project_manager.h  gapp_project_setting.c  gapp_scene_viewport.c  gapp_wviewport.c
